--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
